# kaggle

./: .gitignore  README.md  predictions.csv  pyproject.toml
stellar_class/: pyproject.toml
stellar_class/notebooks/: eda.ipynb
stellar_class/src/: Prediction_GradientBoost.py  predict.py
student_health_risk/notebooks/: eda1.ipynb
student_health_risk/src/: health_condition_prediciton.py
